--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
+    "mysql2": "^3.1.2",
     "sequelize": "^6.28.0"
   }
 }
