--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
   },
   "homepage": "https://github.com/JeromeGlt/me_myself_and_i_backend#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
+    "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.1.2",
+    "password-validator": "^5.3.0",
     "sequelize": "^6.28.0"
   }
 }
